force-app/main/default/objects/Balance__c/Balance__c.object-meta.xml
<CustomObject>
    <label>Balance</label>
    <nameField>
        <displayFormat>BAL-{0000}</displayFormat>
        <label>Balance Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Balances</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>