force-app/main/default/objects/Balance__c/fields/Balance__c.field-meta.xml
<CustomField>
    <fullName>Balance__c</fullName>
    <label>Balance</label>
    <precision>16</precision>
    <scale>9</scale>
    <type>Number</type>
</CustomField>