force-app/main/default/objects/Balance__c/fields/Balance_AUD__c.field-meta.xml
<CustomField>
    <fullName>Balance_AUD__c</fullName>
    <label>Balance AUD</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>