force-app/main/default/objects/Balance__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Balance_AUD__c</columns>
    <columns>Price_Book__c</columns>
    <columns>Product__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>